--- a/Section01/Section01.html
+++ b/Section01/Section01.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="utf-8">
 </head>
+
 <body>
-	<p>NCC</p>
+	<p>新潟コンピュータ専門学校</p>
 </body>
+
 </html>
